# adk_pipe

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  CODE_STANDARDS.md  Dockerfile  README.md  a2as.yaml  creative_eval_test_report.json  deploy-to-agent-engine.ipynb  pyproject.toml  requirements.txt
.github/workflows/: frontend-tests.yml
agent_common/: __init__.py  conditional_agent.py  config.py  genai_retry.py  locations.py  models.py  observability.py  rate_limit.py  retry.py  retry_agent.py  sanitize.py
agents/: README.md  creative_agent  interactive_creative  trend_scout
cloud_functions/creative_fanout/: config.py  main.py  requirements.txt
cloud_functions/trawler_scheduler/: main.py  requirements.txt
cloud_funktions/creative_crf/: config.py  main.py  message.json  requirements.txt  session.py
cloud_funktions/trawler_crf/: config.py  requirements.txt
creative_agent/: __init__.py  agent.py  bq_tools.py  callbacks.py  config.py  gallery_template.py  gcs_tools.py  image_tools.py  prompts.py  requirements.txt  retry_agent.py  schemas.py  tools.py
creative_agent/sub_agents/: __init__.py
creative_copy/: agent.py  callbacks.py  config.py  requirements.txt  tools.py
creative_eval/: __init__.py  agent.py  config.py  evaluate.py  prompts.py  run_eval_test.py  schemas.py
deployment/: README.md  async_app.py  backend_entrypoint.sh  create_session_engine.py  deploy_agent.py  headless_run.py  integration_test.py  test_deployment.py
docs/architecture/: README.md
docs/baselines/: main.md
docs/diagrams/: README.md
docs/experiments/: 2026-07-15-creative-latency.md  2026-07-17-quota-bucket-spread-doe.md
docs/notes/: README.md  agent-engine-vs-cloud-run.md  ambient-agents-vs-cloud-functions.md  creative-agent-image-generation.md  frontend.md  local-testing.md
docs/plans/: 2026-07-12-adk2-retry-adoption.md  2026-07-12-crf-hardening-p95-ambient.md  2026-07-13-deploy-hardening-consolidations.md  2026-07-13-frontend-cloud-run-deployment.md  2026-07-13-frontend-iap-and-persistent-sessions.md  2026-07-13-option4-persist-eval-scores-bq.md  2026-07-13-readme-reorg-deployment-readme.md  2026-07-13-rename-trend-scout.md  2026-07-13-tier1-naming-cleanup.md  2026-07-14-research-pipeline-hardening.md  2026-07-14-ws1-retry-wrapper.md  2026-07-14-ws2-split-producers.md  2026-07-14-ws3-observability.md  2026-07-15-async-job-run-model.md  2026-07-15-resilient-image-generation.md  2026-07-15-trend-scout-degradation-surfacing.md  2026-07-16-context-bloat-file-splits.md  2026-07-16-image-prompting-overhaul.md  2026-07-18-issue104-n5-revalidation.md
docs/screenshots/: README.md
experiments/: README.md
experiments/creative_latency/: __init__.py  fixtures.py  parse_run.py  plot.py  recover_trials.py  render_static.py  report.html  run_experiment.py  run_trial.py
experiments/quota_spread/: __init__.py  analyze.py  arms.json  doe_plot.py  quality.py  run_batch.py  run_doe.py  upload_to_vertex.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/scripts/: capture-screenshots.mjs
frontend/src/app/: globals.css  (+2 more)
interactive_creative/: __init__.py  agent.py  prompts.py  review_tools.py
runserver/: __init__.py  async_runs.py
tests/: README.md  test_agent_common_models.py  test_agents_dir.py  test_async_runs.py  test_backend_entrypoint.py  test_callbacks.py  test_conditional_agent.py  test_config.py  test_creative_eval.py  test_creative_latency_poll.py  test_crf_entrypoint.py  test_crf_logic.py  test_crf_worker_async.py  test_deploy_utils.py  test_experiment_aggregate.py  test_experiment_logs.py  test_experiment_parse.py  test_experiment_plot.py  test_experiment_render_static.py  test_export_concurrency.py  test_image_reference.py  test_observability.py  test_pipeline_structure.py  test_public_api.py  test_quota_spread_analyze.py  test_quota_spread_batch.py  test_quota_spread_upload.py  test_retry_agent.py  test_retry_config.py  test_sanitize.py  test_schemas.py  test_tools.py  test_tools_retry.py  test_trend_scout_concurrency.py  test_trend_scout_logging.py  test_visual_intent_prompts.py
tests/eval/: creative_eval_config.json  eval_config.json
trend_agent/: agent.py  requirements.txt  tools.py
trend_agent/shared_libraries/: callbacks.py  config.py
trend_scout/: agent.py  callbacks.py  config.py  prompts.py  review_tools.py  tools.py
trend_trawler/: agent.py  callbacks.py  config.py  tools.py
web_researcher/: agent.py  callbacks.py  tools.py
web_researcher/sub_agents/: __init__.py
(+141 files in other folders)
