[project]
name = "adk-pipe"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan",email = "jordantotten@google.com"},
    {name = "JordanArgolis", email = "admin@jordantotten.altostrat.com"}
]
readme = "README.md"

requires-python = ">=3.13, <4.0"
dependencies = [
    "google-genai>=2.11.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines]>=1.160.0,<2.0.0",
    "google-adk[eval]>=2.4.0,<3.0.0",
    "pandas>=3.0.3,<4.0.0",
    "google-cloud-bigquery>=3.42.2,<4.0.0",
    "db-dtypes>=1.7.1,<2.0.0",
    "tabulate>=0.10.0,<0.11.0",
    "uvicorn>=0.51.0,<1.0.0",
    "fastapi>=0.139.0,<1.0.0",
    "pillow>=12.3.0,<13.0.0",
    "markdown>=3.10.2,<4.0.0",
    "markdown-pdf>=1.13.2,<2.0.0",
    "absl-py>=2.5.0,<3.0.0",
    "functions-framework>=3.10.2,<4.0.0",
    "cloudevents>=1.12.0,<2.0.0",
    "google-cloud-pubsub>=2.39.0,<3.0.0",
    "litellm>=1.85.7,<2.0.0",
    "plotly>=6.9.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.0,<4.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff.lint.per-file-ignores]
# Package __init__.py files re-export submodules/symbols as the public API.
"__init__.py" = ["F401"]
# Deployment scripts prepend the project root to sys.path before importing
# first-party packages, so their module-level imports intentionally follow code.
"deployment/*.py" = ["E402"]

[tool.ty.src]
# Tests intentionally build Pydantic models / call tools with partial or mock
# kwargs to exercise validation, so ty's arg-type errors there are expected, not
# real defects. Exclude them so `ty check` reflects production-source health.
exclude = ["tests/"]

[tool.ty.rules]
# ADK's SequentialAgent/ParallelAgent are deprecated in favor of Workflow, but
# Workflow cannot yet be used as an LlmAgent sub-agent — so we cannot migrate.
# Silence the unactionable deprecation noise until ADK lifts that restriction.
deprecated = "ignore"
